ROR-788 Reduce GTFS export memory consumption (#89)