@@ -14,8 +14,11 @@
  *
  */
 
-package no.rutebanken.marduk.routes.file;
+package no.rutebanken.marduk.gtfs;
 
+import no.rutebanken.marduk.gtfs.GtfsFileUtils;
+import no.rutebanken.marduk.routes.file.TempFileUtils;
+import no.rutebanken.marduk.routes.file.ZipFileUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
@@ -24,6 +27,7 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
 
@@ -39,12 +43,12 @@ public class GtfsFileUtilsTest {
     public void mergeGtfsFiles_identicalFilesShouldYieldMergedFileIdenticalToOrg() throws Exception {
 
         File input1 = new File(GTFS_FILE_1);
-        InputStream merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(input1, input1));
+        File merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(input1, input1), GtfsExport.GTFS_EXTENDED);
 
         // Should assert content, but no exceptions must do for now
         // assertTrue(FileUtils.sizeOf(merged) <= FileUtils.sizeOf(input1));
 
-        assertTrue(ZipFileUtils.listFilesInZip(merged.readAllBytes()).stream().anyMatch(n -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(n)));
+        assertTrue(ZipFileUtils.listFilesInZip(merged).stream().anyMatch(n -> GtfsFileUtils.FEED_INFO_FILE_NAME.equals(n)));
     }
 
     @Test
@@ -52,9 +56,9 @@ public class GtfsFileUtilsTest {
 
         File input1 = new File(GTFS_FILE_1);
         File input2 = new File(GTFS_FILE_2);
-        InputStream merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(input1, input2));
+        File merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(input1, input2), GtfsExport.GTFS_EXTENDED);
 
-        byte[] data = merged.readAllBytes();
+        byte[] data = Files.readAllBytes(merged.toPath());
         assertTrue(data.length >= FileUtils.sizeOf(input1));
         assertTrue(data.length >= FileUtils.sizeOf(input2));
 
@@ -63,10 +67,9 @@ public class GtfsFileUtilsTest {
 
     @Test
     public void mergeWithTransfers() throws Exception {
-        InputStream merged = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(new File(GTFS_FILE_1), new File(GTFS_FILE_1)));
-        File tmpZip = TempFileUtils.createTempFile(merged.readAllBytes(), "marduk-test-mergeWithTransfers-", ".zip");
+        File mergedZip = GtfsFileUtils.mergeGtfsFiles(Arrays.asList(new File(GTFS_FILE_1), new File(GTFS_FILE_1)), GtfsExport.GTFS_EXTENDED);
 
-        List<String> transferLines = IOUtils.readLines(new ByteArrayInputStream(ZipFileUtils.extractFileFromZipFile(tmpZip, "transfers.txt")), StandardCharsets.UTF_8);
+        List<String> transferLines = IOUtils.readLines(new ByteArrayInputStream(ZipFileUtils.extractFileFromZipFile(mergedZip, "transfers.txt")), StandardCharsets.UTF_8);
         assertThat(transferLines.size()).as("Expected file two duplicates and one other transfer to be merged to two (+ header)").isEqualTo(3);
     }
 
